--- a/Aplicada1/MainWindow.xaml
+++ b/Aplicada1/MainWindow.xaml
@@ -1,12 +1,37 @@
-﻿<Window x:Class="Aplicada1.MainWindow"
+﻿<Window x:Class="DoControlWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Aplicada1"
+        xmlns:local="clr-namespace:DoControlWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="REGISTRO DE ENTRADAS" Height="423" Width="373">
+    <Grid HorizontalAlignment="Left" Width="422">
+        <Label Content="ID Entrada" HorizontalAlignment="Left" Margin="10,22,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.196,-0.313" FontWeight="Bold"/>
+        <TextBox HorizontalAlignment="Left" IsEnabled="False" Margin="10,45,0,0" Text="1001" TextWrapping="Wrap" VerticalAlignment="Top" Width="138"/>
+        <Button Content="Buscar" HorizontalAlignment="Left" Margin="169,44,0,0" VerticalAlignment="Top" Width="100"/>
+        <Label Content="Fecha" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <DatePicker HorizontalAlignment="Left" Margin="12,103,0,0" VerticalAlignment="Top" Width="350" Height="29"/>
+        <Button Content="Nuevo" HorizontalAlignment="Left" Margin="10,370,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.5,0.5" Background="#FF347ED6" FontWeight="Bold"/>
+        <Button Content="Guardar" HorizontalAlignment="Left" Margin="137,370,0,0" VerticalAlignment="Top" Width="100" FontWeight="Bold"/>
+        <Button Content="Eliminar" HorizontalAlignment="Left" Margin="262,370,0,0" VerticalAlignment="Top" Width="100" Background="#FFE8840D" FontWeight="Bold"/>
+        <Label Content="ID Suplidor" HorizontalAlignment="Left" Margin="12,137,0,0" VerticalAlignment="Top" Height="27" Width="77" FontWeight="Bold"/>
+        <ComboBox HorizontalAlignment="Left" Margin="12,164,0,0" VerticalAlignment="Top" Width="350" Height="21"/>
+        <Label Content="ID Cacao" HorizontalAlignment="Left" Margin="12,0,0,0" VerticalAlignment="Center" Height="30" Width="74" FontWeight="Bold"/>
+        <ComboBox HorizontalAlignment="Left" Margin="10,220,0,0" VerticalAlignment="Top" Width="352" Height="23"/>
+        <Label Content="Cantidad" HorizontalAlignment="Left" Margin="12,281,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="25" Width="73" FontWeight="Bold">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-0.081"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <TextBox HorizontalAlignment="Left" IsEnabled="False" Margin="10,302,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="129" Height="22" RenderTransformOrigin="-0.179,0.777"/>
+        <Label Content="TOTAL" HorizontalAlignment="Left" Margin="190,278,0,0" VerticalAlignment="Top" Height="24" Width="58" FontWeight="Bold"/>
+        <TextBox HorizontalAlignment="Left" Margin="169,302,0,0" Text="" IsReadOnly="True" TextWrapping="Wrap" VerticalAlignment="Top" Width="129" Height="22" Foreground="#FF45E621" Background="#FF0F8914" OpacityMask="Black" BorderBrush="#FF0F8914"/>
 
     </Grid>
 </Window>
